[gd_scene load_steps=12 format=2]

[ext_resource path="res://Field.gd" type="Script" id=1]
[ext_resource path="res://new_styleboxflat.tres" type="StyleBox" id=2]
[ext_resource path="res://MarkerListView.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.180392, 0.654902, 1, 1 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.403922 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.301961, 0.301961, 0.301961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="Field" type="Control"]
margin_right = 648.0
margin_bottom = 567.0
theme = SubResource( 6 )
script = ExtResource( 1 )
sizeX = 4
sizeY = 4

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 10.0

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
columns = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 24.0
margin_bottom = 24.0
alignment = 1

[node name="updateButton" type="Button" parent="HBoxContainer"]
margin_left = 98.0
margin_right = 201.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Show Pattern"

[node name="addMarker" type="Button" parent="HBoxContainer"]
margin_left = 205.0
margin_right = 364.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Add Marker at Pattern"

[node name="gotoMarker" type="Button" parent="HBoxContainer"]
margin_left = 368.0
margin_right = 469.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Goto Pattern"

[node name="saveImageButton" type="Button" parent="HBoxContainer"]
margin_left = 473.0
margin_right = 550.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "save img"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -45.0
margin_bottom = 6.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 648.0
margin_bottom = 14.0
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 229.0
margin_right = 258.0
margin_bottom = 14.0
text = "save"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 262.0
margin_right = 289.0
margin_bottom = 14.0
text = "load"

[node name="RemoveMarkerButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 293.0
margin_right = 418.0
margin_bottom = 14.0
text = "remove last marker"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 648.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 25.0
margin_bottom = 68.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 25.0
margin_bottom = 14.0
text = "test"

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 25.0
margin_bottom = 32.0
text = "test"

[node name="Label3" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 25.0
margin_bottom = 50.0
text = "test"

[node name="Label4" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 25.0
margin_bottom = 68.0
text = "test"

[connection signal="pressed" from="HBoxContainer/updateButton" to="." method="_on_updateButton_pressed"]
[connection signal="pressed" from="HBoxContainer/addMarker" to="." method="_on_addMarker_pressed"]
[connection signal="pressed" from="HBoxContainer/gotoMarker" to="." method="_on_gotoMarker_pressed"]
[connection signal="pressed" from="HBoxContainer/saveImageButton" to="." method="_on_gotoMarker_pressed"]
[connection signal="pressed" from="HBoxContainer/saveImageButton" to="." method="_on_saveImageButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RemoveMarkerButton" to="." method="_on_RemoveMarkerButton_pressed"]
